--- a/blog/templates/single-template.html
+++ b/blog/templates/single-template.html
@@ -16,7 +16,7 @@
     {% endfor %}
 </div>
 <div class="col-md-9">
-    {% block entry %} {% endblock %}
+   <p> {% block entry %} {% endblock %}</p>
 </div>
 </div>
     </div>
