--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -3,8 +3,9 @@
 
 <head>
   {% load static %}
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="{% static 'styles/style.css' %}" />
 
  
@@ -16,109 +17,96 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar fixed-top">
-    <a class="navbar-brand" href="#">Logo</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-      aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/team/">Meet the team</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/about/">About</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link" href="/admin"><i class="large material-icons">person</i></a>
-        </li>
+ <div class="navbar-fixed">
+ <nav>
+    <div class="nav-wrapper">
+      <a href="#!" class="brand-logo">SierraBlog</a>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="/">Home</a></li>
+        <li><a href="#">Articles</a></li>
+        <li><a href="/team">Meet The Team</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="/admin"><i class="large material-icons">person</i></a></li>
+      </ul>
+      <ul class="side-nav" id="mobile-demo">
+       <li><a href="/">Home</a></li>
+        <li><a href="#">Articles</a></li>
+        <li><a href="#">Meet The Team</a></li>
+        <li><a href="#">About</a></li>
+         <li><a href="/admin"><i class="large material-icons">person</i></a></li>
       </ul>
     </div>
   </nav>
-
-  <div id="carousel-indicator" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carousel-indicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel-indicators" data-slide-to="1"></li>
-      <li data-target="#carousel-indicators" data-slide-to="2"></li>
-      <li data-target="#carousel-indicators" data-slide-to="3"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="{% static 'img/1.jpg' %}" alt="First slide">
-         <div class="carousel-caption d-none d-md-block">
-    <h5>blah blah blad</h5>
-    <p>blahhhhhhhhhh</p>
-  </div>
-      </div>
-      
-      <div class="carousel-item">
-        <img class="d-block w-100" src="{% static 'img/2.jpg' %}" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="{% static 'img/3.jpg' %}" alt="Third slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="{% static 'img/4.jpg' %}" alt="Third slide">
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carousel-indicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carousel-indicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
 
+ <div class="slider">
+    <ul class="slides">
+      <li>
+        <img src="{% static 'img/1.jpg' %}" alt="First slide"> <!-- random image -->
+        <div class="caption center-align">
+          <h3>This is our big Tagline!</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="{% static 'img/2.jpg' %}" alt="First slide"> <!-- random image -->
+        <div class="caption left-align">
+          <h3>Left Aligned Caption</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="{% static 'img/3.jpg' %}" alt="First slide"> <!-- random image -->
+        <div class="caption right-align">
+          <h3>Right Aligned Caption</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="{% static 'img/4.jpg' %}" alt="First slide"> <!-- random image -->
+        <div class="caption center-align">
+          <h3>This is our big Tagline!</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+    </ul>
+  </div>
   
     {% block content %}
 
     {% endblock %}
   
   <br />
-  <footer id="footer-main">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-3">
-          <p>Copyright 2018</p>
-          <p>Coded by <a href="#">Saidu</a></p>
-        </div>
-        <div class="col-sm-3">
-          <ul class="list-unstyled">
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">What we do</a></li>
-            <li><a href="">Lates</a></li>
-          </ul>
-        </div>
-        <div class="col-sm-3">
-          <ul class="list-unstyled">
-            <li><a href="">Facebook</a></li>
-            <li><a href="">Twitter</a></li>
-            <li><a href="">Youtube</a></li>
-            <li><a href="">Instagram</a></li>
-          </ul>
-        </div>
-        <div class="col-sm-3">
-          <h6>a tiny header</h6>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores veritatis, impedit praesentium
-            totam perferendis </p>
-        </div>
-      </div>
-    </div>
-  </footer>
- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+   <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Follow us</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i class="fab fa-facebook-square"></i> Facebook</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i class="fab fa-twitter"></i> Twitter</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i class="fab fa-whatsapp"></i> Whatsapp</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i class="fab fa-instagram"></i> Instagram</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+           SierraBlog © 2018 Copyright All Right Reserved
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+          </div>
+        </footer>
+            
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+ <script type="text/javascript" src="{% static 'script/jscript.js'%}"></script>
 </body>
 
 </html>
