--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -2,28 +2,29 @@
 
 {% block content %}
    <div class="shadow-lg p-3 mb-5 bg-white rounded text-center">Blog Articles</div>
-    <div class="container">
- <div class="row">
-
-
+ 
         {% for post in posts %}
-
-             <div class="col-md-4">
-<div class="card-group">
-      <div class="card">
-  <img class="card-img-top" src="{{ post.thumb.url }}"/>
-  <div class="card-body">
-    <h5 class="card-title">{{ post.title }}</h5>
-    <p class="card-text">{{ post.summary}}...</p>
-    <a href="/post/{{ post.slug }}" class="btn btn-outline-success">Read More...</a>
-  </div>
-</div>
-</div>
-</div>
+        <div class="container">
+        <div class="row">
+        <div class="col s12 m4 l6">
+          <div class="card">
+            <div class="card-image">
+              <img src="{{ post.thumb.url }}">
+              <span class="card-title">{{ post.title }}</span>
+            </div>
+            <div class="card-content">
+              <p>{{ post.summary}}...</p>
+            </div>
+            <div class="card-action">
+              <a href="/post/{{ post.slug }}">Read more</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+            
 {% endfor %}
-
-    </div>
-    </div>
+ 
 {% endblock %}
 
 
