--- a/blog/templates/team.html
+++ b/blog/templates/team.html
@@ -2,12 +2,10 @@
 <html>
 <head>
  {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="{% static 'styles/style.css' %}" />
-
-  {% load bootstrap3 %}
-  {% bootstrap_css %}
-  {% bootstrap_javascript %}
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,26 +14,23 @@
 </head>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar fixed-top">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-      aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/team/">Meet the team <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/about/">About</a>
-        </li>
+<nav>
+    <div class="nav-wrapper">
+      <a href="#!" class="brand-logo">SierraBlog</a>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="/">Home</a></li>
+        <li><a href="#">Articles</a></li>
+        <li><a href="/team">Meet The Team</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="/admin"><i class="large material-icons">person</i></a></li>
+      </ul>
+      <ul class="side-nav" id="mobile-demo">
+       <li><a href="/">Home</a></li>
+        <li><a href="#">Articles</a></li>
+        <li><a href="#">Meet The Team</a></li>
+        <li><a href="#">About</a></li>
+         <li><a href="/admin"><i class="large material-icons">person</i></a></li>
       </ul>
     </div>
   </nav>
